@@ -27,6 +27,8 @@ Release 0.9.1 - unreleased
 
   IMPROVEMENT
 
+    TAJO-1281: Remove hadoop-common dependency from tajo-rpc. (hyunsik)
+
     TAJO-1291: Rename TajoMasterProtocol to QueryCoordinatorProtocol.
     (hyunsik)
 
